# metron

./: .env  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml  metron_activate_env.sh  metron_deactivate.sh  pyproject.toml
docs/: architecture.md  development_notes.md  project_installation.md
docs/diagram_projects/: high_level_architecture.drawio  metron_conduit_class_diagram_source_connector.drawio  metron_conduit_class_diagram_video_streamer.drawio  metron_conduit_modules_diagram.drawio
metron_conduit/: .env.conduit.demo  Dockerfile  docker-compose.conduit-demo.yml  metron_conduit_README.md  metron_conduit_readme.md  metron_conduit_run.py
metron_conduit/conf/: metron_conduit_config.yaml
metron_conduit/conf/source_connector/: file_source.yaml  usb_cam_source.yaml
metron_conduit/conf/video_streamer/: base_streamer_worker.yaml  mcore_streamer_worker.yaml  mshine_streamer_worker.yaml
metron_conduit/demo/: metron_conduit_receiver.py
metron_conduit/miscellaneous/: metron_conduit_config_schema.py  metron_conduit_param_validators.py  metron_conduit_utils.py
metron_conduit/source_connector/: __init__.py  abstract_source.py  file_source.py  usb_cam_source.py
metron_conduit/video_streamer/: streamer_manager.py  streamer_worker.py
shared/: config.py  config_schema.py  custom_exception.py  globals.py  metron_globals.py  param_validators.py  structures.py  utils.py
