[tool.poetry]
name = "metron"
version = "0.0.0"
description = "Metron project tackles use case of measurement of objects."
authors = ["Ondřej Székely <ondra.szekely@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
